public/styles/nav.css
#nav-bar {
    position: fixed;
    padding-left: 2em;
    padding-right: 2em;
    width: 100%;
    height: 80px;
    background-color: #00a087;
    color: #e8fdff;
    float: left;
}

#nav-bar .logo {
    width: 80px;
    height: 80px;
}

#nav-bar .header {
    position: fixed;
    top: 20px;
    padding-left: 10px;
    font-size: xx-large;
    line-height: normal;
}

